[package]
name = "vmulti-client"
version = "0.2.0"
authors = ["vagola <vladislavs.golubs@yandex.ru>"]
edition = "2018"
description = "Crate for interacting with virtual input driver"
homepage = "https://github.com/vagola/vmulti-client"
repository = "https://github.com/vagola/vmulti-client"
keywords = ["hid", "input", "virtual", "vmulti"]
readme = "README.md"
license = "MIT"

[dependencies]
libc = "0.2"
winapi = { version = "0.3", features = ["hidsdi", "cfgmgr32", "fileapi", "handleapi", "hidpi", "errhandlingapi", "winuser"] }
