[package]
name = "vmulti-client"
version = "0.3.1"
authors = ["vagola <vladislavs.golubs@yandex.ru>"]
edition = "2018"
description = "Crate for interacting with virtual input driver"
homepage = "https://github.com/vagola/vmulti-client"
repository = "https://github.com/vagola/vmulti-client"
keywords = ["hid", "input", "virtual", "vmulti"]
readme = "README.md"
license = "MIT"

[dependencies]
libc = "0.2"
winapi = { version = "0.3", features = ["hidsdi", "cfgmgr32", "fileapi", "handleapi", "hidpi", "errhandlingapi", "winuser"] }
serde = { version = "1.0", default-features = false, optional = true }
itertools = "0.9.0"

[dev-dependencies]
serde_test = "1.0"
